20030817 joystick.c: use Kempston joystick capability
20030818 settings.pl: check no strdup() calls return NULL.
20030820 compat/Makefile.am: add @INCLUDES@
20030820 debugger/commandy.y: add missing ';'
20030821 rzx.c: deactivate recording menu before checking the start
	 time (or OS X loses too much time and stops competition mode
	 recording) (Fred)
20030822 ui/sdl/sdlui.c: #include "display.h"
20030822 fuse/fuse.c: check whether emulation is paused before
	 displaying 'stopping competition mode recording'.
20030825 rzx.c: read in external snapshots before starting RZX
	 playback.
20030901 ui/options.dat: rename "auto-load tapes" to "auto-load
	 tapes/disks".
20030901 man/fuse.1: bring up to date.
20030902 man/fuse.1: use \fB rather than .B for large bit of bold text
	 in the 'competition mode' entry (works much better on Solaris).
20030902 THANKS: Add Ivan Ruiz Etxabe and David Muriel.
20030902 ChangeLog: bring up to date.
20030902 AUTHORS: Add Matthew Westcott.
20030903 ui/scaler/scalers.c: small fix to 2xSaI scaler (Fred/ScummVM team).
20030903 ui/gtk/binary.c: add padding around widgets
20030905 ui/gtk/binary.c: call save_data not load_data when saving binary
         data. Add padding around the save binary data dialog widgets.
20030905 debugger/expression.c: get brackets right when deparsing
         expressions.
20030908 dck.c: use Timex dock capability in dck_read
20030912 ChangeLog, README, man/fuse.1: documentation updates for the
         0.6.1 release (Release-0_6_1-branch)
20030912 man/fuse.1: fix typo in BUGS section (for -> from). Mention 16K
	 Spectrum as being available when changing machine.
	 (Release-0_6_1-branch)
20030913 Makefile.am: distribute compat.h (Release-0_6_1-branch)
20030913 Merge all changes except the different DSA key from
	 Release-0_6_1-branch onto HEAD.
20030913 lib/Makefile.am: distribute disk_plus3.z80 (Release-0_6_1-branch)
20030913 Merge the above change back onto HEAD.